[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Add Fighter.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/FlatUI/kenneyUI.tres" type="Theme" id=2]

[node name="Add Fighter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Button_Return" type="Button" parent="."]
margin_left = 433.0
margin_top = 398.0
margin_right = 622.324
margin_bottom = 440.251
text = "Return to menu"

[node name="Description" type="RichTextLabel" parent="."]
margin_left = 236.0
margin_top = 163.0
margin_right = 475.0
margin_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2
text = "New fighter's name
(Name Lastname)"

[node name="NameInput" type="TextEdit" parent="."]
margin_left = 514.0
margin_top = 159.0
margin_right = 819.0
margin_bottom = 213.0

[node name="Button_Add" type="Button" parent="."]
margin_left = 433.0
margin_top = 309.0
margin_right = 622.0
margin_bottom = 351.251
text = "ADD"

[connection signal="pressed" from="Button_Return" to="." method="_on_Button_Return_pressed"]
[connection signal="pressed" from="Button_Add" to="." method="_on_Button_Add_pressed"]
